# WordCounter

./: .gitignore  CMakeLists.txt  README.md
data/: test.txt
include/: wordcounter.h
installer/: test.txt
src/: main.cpp  wordcounter.cpp
